# solana-scraping

./: .gitignore  README.md  celeb_coins.csv  get_images_from_ipfs.py  get_meta.py  get_meta_2022.py  get_metadata.py  leader_schedule.py  pyproject.toml  requirements.txt  simple_usdc.py  token_examples.py
birdeye/: birdeye_utils.py  fetch_pump_ohlcv.py  fetch_pump_prices.py  fsk.csv  get_creations.py  get_price_history.py  luigi.csv  popeleo.csv  test_luigi.py  top_tokens.py  tyler_robinson.csv
birdeye/data/: OHLCV_history_13BeCmeJHQHNyUwpDzsWs93dDicdz4dCpsKWQ9Bx72cy.csv  OHLCV_history_13FW1USpHYgB5bWt3kR5Kub2SiSYn8Av3biyuKnDx87q.csv  OHLCV_history_13XpZmJxos3CrGVVUnmFJ8aR5i3SZGFwMtGXsLbDB7Fn.csv  OHLCV_history_13gTWPPQSAHARSZbTZQYQwZcvV3wDR1tvGFrouXspump.csv  OHLCV_history_14S7f9j5xVEL2eFqZDvhYGaSJY18kaK9YoS1BbqsAqJ.csv  OHLCV_history_21T6nZD7aRnGK28pc1ER8oK9inooCBVC3eAgrxHSpump.csv  OHLCV_history_21jMC1aXyk99ZwxCe1CBXfnoCpn7uVjeaCiUagZkpump.csv  OHLCV_history_22Ea8UbGM3c8iEcY5ohdT9YywcNve3J8B1xJYJavDiN2.csv  OHLCV_history_22LMjZKQpaw1CpcjkA7W8rL2PnWKHzGH8TiLW4oR55jC.csv  (+8015 more)
bitquery/: README.md  base_query.gql  creations.py  daily-prices-by-count.py  daily-prices.py  daily_prices.py  get_dexes.py  monitor-scraping.sh  pump-creation-subscription.py  pump-prices.py  pump-subscription.py  scrape-raydium.py
data/: solana_leaders.csv  token_metadata.csv
moralis/: moralis_utils.py  test_get_price_by_token.py
pump/: get_pump_metadata.py  scrape_pump_final.py
raydium/: README.md  get_token_names.py  get_transactions.py  process_raydium_txs.py  token_utils.py
(+883 files in other folders)
